24-11-26 13주차_1교시 활동

--- a/week7_BBS/강의내용.md
+++ b/week7_BBS/강의내용.md
@@ -31,3 +31,10 @@
 	ppt로 작업하고, 실제 pdf로 제출하기
 	
 	다음주 월요일 까지 2024.11.25월 까지 
+	
+# 폼테그의 action 속성은 삭제 
+- question modify의 아이디를 토대로 들어왔으면  그 요청을 그대로 보내줌 메서드가 적용이 됨
+
+- 액션없이 submit 메서드 post가 적용이되어 method가 post로 적용되어서 @postmapping
+
+- csrf 토큰을  만들어서 넘겨주는 작업을 추가해줘야함
